# TLPandMT

1 лабораторная/Документация/: main.cpp
1 лабораторная/Приложение/: fact.dot
1 лабораторная/Приложение/src/: sum.cpp
2 лабораторная/Приложение/: CMakeLists.txt  fact.dot
2 лабораторная/Приложение/cmake/: CompileOptions.cmake
2 лабораторная/Приложение/src/: main.cpp  source.c  source.ll  source_ipsccp.ll  source_loop-rotate.ll
